TP FINAL PARTE 1

--- a/index.html
+++ b/index.html
@@ -1,45 +1,40 @@
 <!DOCTYPE html>
 <html>
-<meta charset="UTF-8">
-<title>30.07</title>
-<link rel="stylesheet" type="text/css" href="">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <head>
-
-
-
+	<meta charset="UTF-8">
+	<title>30.07</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
 </head>
 <body>
-	<form id="miFormularioDeRegistro" accept-charset="UTF-8" action="https://formkeep.com/f/881a5976d674" method="POST"/>
-	<input type="hidden" name="utf8" value="✓">
-	<div class="form-group">
-		<label for="exampleInputEmail1">Nombre</label>
-		<input type="text" name="nombre" class="form-control" id="exampleInputNombre1" placeholder="Nombre">
+	<div class="fondo">
+		<nav>
+			<div class="container">
+				<div class="Anfibia">
+					<img src="imagenes/anfibia.png">
+				</div>
+				<div class="Universidad"></div>
+				<img src="">
+				<div class="Secciones">
+					<ul>
+						<li>Crónicas</li>
+						<li>Ensayos</li>
+						<li>Blog</li>
+						<li>Comunidad</li>
+						<li>Autores</li>
+						<li>Qué es Anfibia</li>
+						<li>Staff</li>
+						<li>Amphibie</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 	</div>
-	<div class="form-group">
-		<label for="exampleInputEmail1">E-mail</label>
-		<input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-	</div>
-	<div class="form-group">
-		<label for="exampleInputPassword1">Password</label>
-		<input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-	</div>
-	<div class="form-group">
-		<label for="exampleInputFile">File input</label>
-		<input type="file" name="file" id="exampleInputFile">
-		<p class="help-block">Example block-level help text here.</p>
-	</div>
-	<div class="checkbox">
-		<label>
-			<input type="checkbox" name="checkbox"> Check me out
-		</label>
-	</div>
-	<button type="submit" class="btn btn-default">Submit</button>
-</form>
-
 </body>
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
 <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.5.6/slick.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
 <html>
